# solana-ua-bootcamp-2025-03-19

./: .gitignore  package-lock.json  package.json  tsconfig.json
practice-1/: README.md  check-balance.ts  generate-keypair-by-template-multi.ts  generate-keypair-by-template.ts  generate-keypair-worker.js  generate-keypair-worker.ts  generate-keypair.ts  load-keypair.ts  main.ts  worker.ts
practice-2/: create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  mint-tokens.ts  send-sol.ts
practice-2/rust-ex/: Cargo.toml
practice-3/escrow/: Anchor.toml  jest.config.js  package-lock.json
practice-3/escrow/programs/escrow/src/: constants.rs  lib.rs
practice-3/escrow/programs/escrow/src/instructions/: make_offer.rs  take_offer.rs
practice-3/escrow/programs/escrow/src/state/: offer.rs
practice-3/escrow/tests/: escrow.test.ts
practice-3/favorites/: Anchor.toml  jest.config.js
practice-3/favorites/programs/favorites/src/: lib.rs
practice-3/favorites/tests/: favorites.test.ts
