[package]
name = "rust-ex"
version = "0.1.0"
edition = "2024"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
#idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.140"
solana-client = "2.2.7"
solana-program = "2.2.1"
solana-sdk = "2.2.2"
spl-memo = "6.0.0"
spl-token-2022 = "8.0.1"
#anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
#anchor-spl = {version = "0.31.0", features = ["metadata"]}
mpl-token-metadata = "5.1.0"
mpl-core = "0.10.0"
spl-token = "8.0.0"


[[bin]]
name="rust-ex"
